[gd_scene load_steps=4 format=3 uid="uid://b401kfgly6xeb"]

[ext_resource type="Script" path="res://loading_screen.gd" id="1_v1xfv"]
[ext_resource type="Texture2D" uid="uid://dmqxkyy35aytx" path="res://loading_screen_background.png" id="2_uihfy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eg5g1"]
texture = ExtResource("2_uihfy")

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v1xfv")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_eg5g1")

[node name="FactLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -510.0
offset_top = 48.0
offset_right = 514.0
offset_bottom = 391.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.311574, 0.917421, 0.514608, 1)
theme_override_colors/font_shadow_color = Color(0.637307, 0.249755, 0.555387, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
autowrap_mode = 3
clip_text = true
text_overrun_behavior = 1

[node name="LoadingLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.925214
anchor_right = 1.0
anchor_bottom = 0.960684
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.0930569, 0.865927, 0.810447, 1)
theme_override_font_sizes/font_size = 60
text = "Loading..."
horizontal_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="FactTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="FactTimer" to="." method="_on_fact_timer_timeout"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
